--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
 }
 
 .search-form{
@@ -16,7 +16,7 @@
 
 }
 .search-button{
-  background: lawngreen;
+  background: peachpuff;
   border:none;
   padding: 10px 20px;
   color: white;
